# Helm

./: .gitignore  .mise.toml  .semgrepignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  RELEASE_PROCESS_NOTES_TMP.md  install.sh  skills
core/rust/crates/helm-cli/: Cargo.toml
core/rust/crates/helm-cli/src/: cli_errors.rs  command_dispatch.rs  coordinator_transport.rs  json_output.rs  main.rs  provenance.rs
core/rust/crates/helm-cli/src/tui/: mod.rs
core/rust/crates/helm-core/: Cargo.toml
core/rust/crates/helm-core/src/: doctor.rs  install_instances.rs  lib.rs  managed_automation_policy.rs  manager_dependencies.rs  manager_instances.rs  manager_lifecycle.rs  manager_policy.rs  post_install_setup.rs  provenance_policy.rs  registry.rs  repair.rs  task_context.rs  uninstall_preview.rs  versioning.rs
core/rust/crates/helm-core/src/adapters/: asdf.rs  asdf_process.rs  bundler.rs  (+58 more)
core/rust/crates/helm-core/tests/: adapter_capability_gate.rs  authority_ordering.rs  end_to_end_asdf.rs  end_to_end_bundler.rs  end_to_end_cargo.rs  end_to_end_cargo_binstall.rs  end_to_end_homebrew.rs  end_to_end_homebrew_cask.rs  end_to_end_macports.rs  end_to_end_mas.rs  end_to_end_mise.rs  end_to_end_npm.rs  end_to_end_pip.rs  end_to_end_pipx.rs  end_to_end_pnpm.rs  end_to_end_poetry.rs  end_to_end_rubygems.rs  end_to_end_rustup.rs  end_to_end_softwareupdate.rs  end_to_end_system_adapters.rs  end_to_end_yarn.rs  execution_contract.rs  manager_lifecycle_matrix.rs  multi_manager_orchestration.rs  orchestration_adapter_execution.rs  orchestration_adapter_runtime.rs  orchestration_in_memory.rs  orchestration_runtime_queue.rs  orchestration_sqlite_task_persistence.rs  registry_contract.rs  search_cancellation.rs  search_end_to_end.rs  search_persistence_watcher.rs  sqlite_migrations_contract.rs  sqlite_store_skeleton.rs  tokio_process_executor.rs
core/rust/crates/helm-ffi/: Cargo.toml  build.rs  cbindgen.toml
core/rust/crates/helm-ffi/include/: helm.h
core/rust/crates/helm-ffi/src/: lib.rs
(+477 files in other folders)
