[package]
name = "helm-cli"
version.workspace = true
edition = "2024"
license = "UNLICENSED"

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
helm-core = { path = "../helm-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }
semver = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
ureq = "2.10"
ratatui = "0.30"
crossterm = "0.28"
