[package]
name = "helm-ffi"
version = "0.4.0-alpha.2"
edition = "2024"
license = "UNLICENSED"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
helm-core = { path = "../helm-core" }
libc = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
cbindgen = "0.29"
